ทำฟังค์ชันสำหรับตรวจสอบนามสกุลไฟล์รูป และ เพิ่มระบบเปลี่ยนโปรไฟล์
